# eren_mobile_test

./: README.md
eren/: Cargo.toml  README.md
eren/android/app/: build.gradle.kts
eren/android/app/src/main/: AndroidManifest.xml
eren/ios/ios/: rust_ios_lib.h
eren/ios/ios.xcodeproj/: project.pbxproj
eren/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/eren.xcuserdatad/: UserInterfaceState.xcuserstate
eren/ios3/ios3/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
eren/ios3/ios3.xcodeproj/: project.pbxproj
eren/ios3/ios3.xcodeproj/project.xcworkspace/xcuserdata/eren.xcuserdatad/: UserInterfaceState.xcuserstate
eren/ios_old/ios/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift  ios-Bridging-Header.h
eren/ios_old/ios.xcodeproj/: project.pbxproj
eren/ios_old/ios.xcodeproj/project.xcworkspace/xcuserdata/eren.xcuserdatad/: UserInterfaceState.xcuserstate
eren/src/: lib.rs
eren/src/test_vertex_input/: vertex.rs
eren_android/: Cargo.toml
eren_vulkan/: Cargo.toml  README.md
eren_vulkan/android/app/: build.gradle.kts
eren_vulkan/android/app/src/main/: AndroidManifest.xml
eren_vulkan/android/gradle/: libs.versions.toml
eren_vulkan/android/gradle/wrapper/: gradle-wrapper.properties
eren_vulkan/ios/ios/: main.swift
eren_vulkan/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/eren.xcuserdatad/: UserInterfaceState.xcuserstate
eren_vulkan/src/: lib.rs
eren_vulkan/src/test_vertex_input/: render_pass.rs  renderer.rs  subpass.rs  ubo.rs  vertex.rs
eren_window/: Cargo.toml
eren_window/ios/ios/: ios-Bridging-Header.h
eren_window/ios/ios.xcodeproj/: project.pbxproj
eren_window/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/eren.xcuserdatad/: UserInterfaceState.xcuserstate
eren_window/ios/iosTests/: iosTests.swift
eren_window/src/: lib.rs
(+26 files in other folders)
