[package]
name = "eren_mobile_test"
version = "0.1.0"
edition = "2024"

[lib]
name = "eren_mobile_test"
crate-type = ["cdylib", "staticlib"]

[dependencies]
env_logger = "0.11.8"
eren_window = { path = "../../eren/eren_window" }
eren_render_shared = { path = "../../eren/eren_render_shared" }
log = "0.4.27"
thiserror = "2.0.12"
wgpu = { version = "25.0.2", features = ["webgl"] }
winit = { version = "0.30.11", features = ["android-game-activity"] }
chrono = "0.4.41"
glam = "0.30.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "console"] }
