[package]
name = "eren_vulkan_mobile_test"
version = "0.1.0"
edition = "2024"

[lib]
name = "eren_vulkan_mobile_test"
crate-type = ["cdylib", "staticlib"]

[dependencies]
eren_window = { path = "../../eren/eren_window" }
eren_vulkan_render_shared = { path = "../../eren/eren_vulkan_render_shared" }
ash = "0.38.0"
env_logger = "0.11.8"
glam = "0.30.4"
log = "0.4.27"
winit = { version = "0.30.11", features = ["android-game-activity"] }
thiserror = "2.0.12"
