[package]
name = "eren_window_mobile_test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
eren_window = { path = "../../eren/eren_window" }
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
thiserror = "2.0.12"
winit = "0.30.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "console"] }
